--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,25 +1,5 @@
 Changelog of recent updates: https://github.com/RobertSkalko/Mine-And-Slash-Rework/blob/1.20-Forge/changelogs/v.5.7.txt
 
-v.5.7.0
-- Spell casting now has custom animations! This requires a new dependency mod: player animator
-Spell animations are dictated through each spell's datapack json so you can change them, add new ones etc.
-The actual animations file is in the assets\mmorpg\player_animation folder
-- Some useless/confusing items are now hidden from JEI, still available in creative tabs
-- a lot of spells now have cast time again. But i think it will feel good now with better animations instead of just "wave hand"
-- charge gui redesigned
-- cast bar gui redesigned
-- player is now slowed when casting (like when using an item, unsure if feels the same though)
-- hotbar swapping overlay reworked to show all spells but also show which hotbar is the currently used
-- overlays can now be disabled
-- overlays can now be configured. You can specify positions, disable them, or anchor them to other overlays
-- effect overlay can now be horizontal and vertical and attached to other overlays like the spell hotbar 
-- attempt to cache some stat calculation for less lag on servers, may be bugs but should be significant perf improvement if it works. At the very least halved the tick lag of players/entities caused by mns stat calc
-- map rarity orbs are now craftable
-- new entity targetting predicate: allies_not_self
-- shooting star now tracks to nearest non self ally and was slightly buffed
-
-PLEASE report any weird animations for spells, or bugs related to them! 
-Same with gui overlays and stat calculation.
-
-v.5.7.1
-- fix anims in multiplayer
+v.5.7.2
+- fix weapon cache
+- fix supp gems not working
