--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -349,6 +349,7 @@
 	"item.mmorpg.offhand.tome.diamond": "Tome",
 	"item.mmorpg.offhand.tome.iron": "Tome",
 	"item.mmorpg.offhand.tome.wood": "Tome",
+	"item.mmorpg.omen": "Omen",
 	"item.mmorpg.plate_set": "Plate Soul Modifier",
 	"item.mmorpg.potion.health.0": "Common Health Potion",
 	"item.mmorpg.potion.health.1": "Uncommon Health Potion",
@@ -598,64 +599,6 @@
 "_comment": " [CATEGORY]: DUNGEON - NAMES",
 
 
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"item.mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
-	"mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
-	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 	"mmorpg.ailment.bleed": "Bleed",
@@ -697,6 +640,64 @@
 	"mmorpg.effect.wounds": "Wounds",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
+
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"item.mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
+	"mmorpg.currency.enchant_reroll": "Orb of Second Guessing",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
+	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1862,21 +1863,6 @@
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 
-"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
-
-	"item.mmorpg.jewelry.necklace.diamond": "Necklace",
-	"item.mmorpg.jewelry.necklace.gold": "Necklace",
-	"item.mmorpg.jewelry.necklace.iron": "Necklace",
-	"item.mmorpg.jewelry.ring.diamond": "Ring",
-	"item.mmorpg.jewelry.ring.gold": "Ring",
-	"item.mmorpg.jewelry.ring.iron": "Ring",
-	"item.mmorpg.weapon.staff.diamond": "Staff",
-	"item.mmorpg.weapon.staff.iron": "Staff",
-	"item.mmorpg.weapon.staff.wood": "Staff",
-
-"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
-
-
 "_comment": " [CATEGORY]: STATPRIORITY - NAMES",
 
 	"mmorpg.stat_priority.after_damage_bonuses": "AFTER_DAMAGE_BONUSES",
@@ -1890,6 +1876,21 @@
 	"mmorpg.stat_priority.hit_prevention": "HIT_PREVENTION",
 
 "_comment": " [CATEGORY]: STATPRIORITY - NAMES",
+
+
+"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
+
+	"item.mmorpg.jewelry.necklace.diamond": "Necklace",
+	"item.mmorpg.jewelry.necklace.gold": "Necklace",
+	"item.mmorpg.jewelry.necklace.iron": "Necklace",
+	"item.mmorpg.jewelry.ring.diamond": "Ring",
+	"item.mmorpg.jewelry.ring.gold": "Ring",
+	"item.mmorpg.jewelry.ring.iron": "Ring",
+	"item.mmorpg.weapon.staff.diamond": "Staff",
+	"item.mmorpg.weapon.staff.iron": "Staff",
+	"item.mmorpg.weapon.staff.wood": "Staff",
+
+"_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: STAT LAYER - NAMES",
@@ -2669,6 +2670,7 @@
 	"mmorpg.word.noduplicatesockets": "No Duplicate Sockets",
 	"mmorpg.word.none": "None",
 	"mmorpg.word.normal_gear": "Normal Gear",
+	"mmorpg.word.normal_rarity": "Normal Rarity",
 	"mmorpg.word.nosocketedspell": "No Socketed Spell",
 	"mmorpg.word.not_a_potential_consumer": "Does not consume potential when used",
 	"mmorpg.word.nothing": "Nothing",
@@ -2698,6 +2700,7 @@
 	"mmorpg.word.rerollsaffix": "Rerolls an Affix",
 	"mmorpg.word.reward_offers": "Reward Offers:",
 	"mmorpg.word.rune": "Rune",
+	"mmorpg.word.runed_gear": "Runed Rarity",
 	"mmorpg.word.runeword": "Runeword",
 	"mmorpg.word.salvageable": "Salvageable",
 	"mmorpg.word.salvaging": "Salvaging",
@@ -2849,22 +2852,22 @@
 	"mmorpg.currency.desc.affix_common_reroll": "Re-rolls a random affix into a Common Rarity Random Affix.",
 	"mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
 	"item.mmorpg.currency.desc.affix_tier_up_down": "Unpredictably Adds or removes a tier from a random affix.",
-	"item.mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
 	"mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
+	"item.mmorpg.currency.desc.chaos_orb": "DANGER! Corrupts the item, either destroying it, or upgrading it. \nAlso sets Potential to 0, meaning the item can never be crafted on again.",
 	"item.mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
 	"mmorpg.currency.desc.enchant_reroll": "Randomizes the Infusion",
-	"item.mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
-	"mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
+	"item.mmorpg.currency.desc.entangled_affix_upgrade": "Either Upgrades a random affix, or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
+	"mmorpg.currency.desc.entangled_potential": "Either Adds 25 Potential to the item or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_quality": "Either Randomly Upgrades Quality of An Item (1-5%) or Corrupts the Item, making it Unmodifiable.",
 	"item.mmorpg.currency.desc.entangled_quality": "Either Randomly Upgrades Quality of An Item (1-5%) or Corrupts the Item, making it Unmodifiable.",
-	"item.mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
-	"item.mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
+	"item.mmorpg.currency.desc.entangled_unique_reroll": "Either Upgrades unique stats by +10% or Corrupts the Item, making it Unmodifiable.",
 	"mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
-	"mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
+	"item.mmorpg.currency.desc.jewel_corrupt": "Corrupts a Jewel, granting it additional stats. Has a chance to Destroy it!",
 	"item.mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
+	"mmorpg.currency.desc.level_up_orb": "Increases gear level, maximum 5 uses on an item.",
 	"item.mmorpg.currency.desc.map_rarity_upgrade": "Upgrades Map Rarity. Maps with higher rarities can drop better and higher rarity gear but are also more difficult to beat.",
 	"mmorpg.currency.desc.map_rarity_upgrade": "Upgrades Map Rarity. Maps with higher rarities can drop better and higher rarity gear but are also more difficult to beat.",
 	"item.mmorpg.currency.desc.mastery_seal0": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
@@ -2873,30 +2876,30 @@
 	"mmorpg.currency.desc.mastery_seal1": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal2": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal2": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"item.mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"item.mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
+	"item.mmorpg.currency.desc.mastery_seal3": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
+	"item.mmorpg.currency.desc.mastery_seal4": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
-	"mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
+	"mmorpg.currency.desc.mastery_seal5": "Caps the level of drops possible with a profession tool. \nUseful in case you want lower level drops, in case you still need materials \nto level up your crafting skills.",
 	"item.mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
+	"mmorpg.currency.desc.orb_of_quality": "Upgrades Quality of An Item, quality boosts defenses.",
 	"mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone0": "Upgrades Quality of An Item by 2%, can only be used once",
-	"item.mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
+	"item.mmorpg.currency.desc.sharpening_stone1": "Upgrades Quality of An Item by 4%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone2": "Upgrades Quality of An Item by 6%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone2": "Upgrades Quality of An Item by 6%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone3": "Upgrades Quality of An Item by 8%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone3": "Upgrades Quality of An Item by 8%, can only be used once",
-	"mmorpg.currency.desc.sharpening_stone4": "Upgrades Quality of An Item by 10%, can only be used once",
 	"item.mmorpg.currency.desc.sharpening_stone4": "Upgrades Quality of An Item by 10%, can only be used once",
-	"item.mmorpg.currency.desc.sharpening_stone5": "Upgrades Quality of An Item by 12%, can only be used once",
+	"mmorpg.currency.desc.sharpening_stone4": "Upgrades Quality of An Item by 10%, can only be used once",
 	"mmorpg.currency.desc.sharpening_stone5": "Upgrades Quality of An Item by 12%, can only be used once",
+	"item.mmorpg.currency.desc.sharpening_stone5": "Upgrades Quality of An Item by 12%, can only be used once",
 	"item.mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing. Can't add more sockets than the item's rarity allows.",
 	"mmorpg.currency.desc.socket_adder": "Has a chance to add a socket or do nothing. Can't add more sockets than the item's rarity allows.",
-	"item.mmorpg.currency.desc.unique_reroll": "Increases or reduces unique stats by 5%",
 	"mmorpg.currency.desc.unique_reroll": "Increases or reduces unique stats by 5%",
+	"item.mmorpg.currency.desc.unique_reroll": "Increases or reduces unique stats by 5%",
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - DESCRIPTIONS",
 
@@ -3364,6 +3367,13 @@
 "_comment": " [CATEGORY]: STATS - DESCRIPTIONS",
 
 
+"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
+
+	"mmorpg.uber_map.desc.uber1": "A living mortal, in MY Realm?",
+
+"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
+
+
 "_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS",
 
 	"mmorpg.ailment.desc.bleed": "Deals 120% of the damage as \u00A76\u2600 Physical\u00A77\u00A79 Damage for 5s.",
@@ -3373,14 +3383,7 @@
 	"mmorpg.ailment.desc.poison": "Deals 150% of the damage as \u00A75\u2600 Chaos\u00A77\u00A79 Damage for 10s.",
 	"mmorpg.effect.desc.thorn": "Attacking an enemy with Thorns consumes the thorns to deal [calc:thorn_bush] \u00A76\u2600 Physical\u00A77 Damage",
 
-"_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS",
-
-
-"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS",
-
-	"mmorpg.uber_map.desc.uber1": "A living mortal, in MY Realm?",
-
-"_comment": " [CATEGORY]: UBER MAP - DESCRIPTIONS"
+"_comment": " [CATEGORY]: STATUSEFFECTS - DESCRIPTIONS"
 
 
 }
