--- a/src/main/resources/assets/mmorpg/lang/manual.json
+++ b/src/main/resources/assets/mmorpg/lang/manual.json
@@ -118,6 +118,7 @@
 "mmorpg.one_of_a_kind.start": "Start",
 
 "curios.identifier.salvage_bag": "Salvage Bag",
+"curios.identifier.omen": "Omen",
 "mmorpg.chest_type.aura": "Aura",
 "mmorpg.chest_type.currency": "Currency",
 "mmorpg.chest_type.gear": "Gear",
