--- a/src/main/resources/assets/mmorpg/lang/ko_kr.json
+++ b/src/main/resources/assets/mmorpg/lang/ko_kr.json
@@ -142,7 +142,7 @@
     "mmorpg.grouped_stat_section.regen": "재생 스탯",
     "mmorpg.item_tips.affix_stats": "수식어 스탯: ",
     "mmorpg.item_tips.alt_tip": "[Alt]: 설명",
-    "mmorpg.item_tips.augment_explanation": "Enhances Player stats when equipped.",
+    "mmorpg.item_tips.augment_explanation": "장착 시 플레이어의 스탯을 증가시켜 줍니다.",
     "mmorpg.item_tips.aura_reservation": "오라 점유: ",
     "mmorpg.item_tips.buff_consumable_duration_minutes": "지속시간: %1$s분",
     "mmorpg.item_tips.buff_consumable_info": "소모품은 종류별로 하나씩만 활성화할 수 있습니다:\n엘릭서, 음식, 생선.",
@@ -156,14 +156,14 @@
     "mmorpg.item_tips.drag_and_drop_to_use_desc": "- 인벤토리에서 클릭하여 마우스에 들고, 사용하고 싶은 아이템에 놓으면 사용됩니다.",
     "mmorpg.item_tips.drop_chance": "드랍 확률: %1$s",
     "mmorpg.item_tips.drop_chance_extra_info": "자신과 같은 레벨의 몬스터를 처치한다는 가정하의 아이템 드랍 확률입니다.",
-    "mmorpg.item_tips.drop_level_range": "Drops at Levels: %1$s",
+    "mmorpg.item_tips.drop_level_range": "다음 레벨에서 획득가능: %1$s",
     "mmorpg.item_tips.durability": "내구도: ",
     "mmorpg.item_tips.empty_socket": "[빈 소켓]",
     "mmorpg.item_tips.exp": "경험치: %1$s%%",
-    "mmorpg.item_tips.gem_item_usage": "Use on Gear with sockets to Insert.\nCan also be Crafted",
+    "mmorpg.item_tips.gem_item_usage": "장비의 빈 소켓에 장착할 수 있습니다.\n제작도 가능합니다.",
     "mmorpg.item_tips.gem_open_gui_tip": "손에 들고 우클릭하여 Gui 열기",
     "mmorpg.item_tips.infused": "Infused(%1$s/10): ",
-    "mmorpg.item_tips.infusion_gear_level_range": "Gear level range: %1$s - %2$s",
+    "mmorpg.item_tips.infusion_gear_level_range": "장비 레벨 범위: %1$s - %2$s",
     "mmorpg.item_tips.item_tier_tip": "아이템 등급: ",
     "mmorpg.item_tips.item_type": "아이템 타입: ",
     "mmorpg.item_tips.jewel_stats": "주얼 스탯: ",
@@ -185,7 +185,7 @@
     "mmorpg.item_tips.prefix_stats": "접두사 스탯: ",
     "mmorpg.item_tips.primary_profession_mat_info": "All Professions have 2 primary material types:\n - Tier Material from Gathering professions\n - Rarity Material from Salvaging.\nInsert both to see Recipes!",
     "mmorpg.item_tips.primary_profession_use_jei": "You can Use JEI Mod Too",
-    "mmorpg.item_tips.prof_mat_level_range_info": "Gained when your profession level is:",
+    "mmorpg.item_tips.prof_mat_level_range_info": "전문 기술 레벨 다음과 같을때 획득: ",
     "mmorpg.item_tips.prof_tool_exp_tip": "Exp: %1$s/%2$s",
     "mmorpg.item_tips.prof_tool_level_cap": "Capped Drops to LVL %1$s",
     "mmorpg.item_tips.prof_tool_stats_tip": "Tool Stats: ",
@@ -209,7 +209,7 @@
     "mmorpg.item_tips.stone_repaire_durability": "내구도를 %1$s 수리합니다.",
     "mmorpg.item_tips.suffix_stats": "접미사 스탯: ",
     "mmorpg.item_tips.support_gem_cost": "자원 소모 배율: %1$s%%",
-    "mmorpg.item_tips.support_gem_explanation": "Boost the power of the Spell it's socketed into.",
+    "mmorpg.item_tips.support_gem_explanation": "스킬 핫키란에서 장착가능하며, 스킬을 강화시켜 줍니다.",
     "mmorpg.item_tips.support_gem_only_one": "오직 하나만 사용가능: ",
     "mmorpg.item_tips.tier_influence": "Tier Influence For Mob",
     "mmorpg.item_tips.tier_tip": "등급: ",
@@ -1810,7 +1810,7 @@
     "mmorpg.chat.favor_death_msg": "당신의 평판이 %1$s점 감소하였습니다.",
     "mmorpg.chat.favor_down": "죽음으로 인해 당신의 평판이 %1$s로 감소하였습니다, 불명예를 기억하십시오.",
     "mmorpg.chat.favor_up": "업적을 획득하여, 당신의 평판이 %1$s로 상승하였습니다!",
-    "mmorpg.chat.gear_drop": "아직 해당 아이템의 요구 사항을 충족하지 못했습니다.",
+    "mmorpg.chat.gear_drop": "아이템을 사용하기위해 필요한 최소 요구 사항을 충족하지 못했습니다.",
     "mmorpg.chat.gear_no_potential": "장비의 잠재력이 고갈되어 더 이상 강화할 수 없습니다. 그러나 보석, 룬 등 잠재력 비용이 0인 재화는 사용할 수 있습니다.",
     "mmorpg.chat.gem_socketed": "보석 장착됨",
     "mmorpg.chat.how_to_enable_command_block": "활성화 하려면 server.properties 파일을 열어, enable-command-block 항목을 false에서 true로 바꾸세요.",
@@ -1832,7 +1832,7 @@
     "mmorpg.chat.needs_empty_or_rune": "빈 소켓 또는 룬이 박혀있는 아이템이 필요합니다. 아이템에 룬이 있는 경우, 리롤됩니다.",
     "mmorpg.chat.new_day": "새로운 날이 찾아왔습니다! 다음 아이템의 전문기술 드랍률이 상향되었습니다:",
     "mmorpg.chat.no_charges": "스킬이 아직 충전되지 않았습니다.",
-    "mmorpg.chat.no_duplicate_aura": "이 오라는 하나만 장착할 수 있습니다.",
+    "mmorpg.chat.no_duplicate_aura": "같은 타입의 오라는 장착할 수 없습니다.",
     "mmorpg.chat.no_enchant_on_item": "이 아이템에는 M&S 마법부여가 없습니다.",
     "mmorpg.chat.no_mana": "마나가 부족합니다.",
     "mmorpg.chat.no_more_lives_remaining": "생명력이 모두 소진되었습니다.",
@@ -2654,7 +2654,7 @@
     "mmorpg.currency.desc.entangled_quality": "아이템의 품질이 랜덤하게 1-5% 상승하거나 아이템이 손상되어 더 이상 강화할 수 없게 됩니다.",
     "mmorpg.currency.desc.entangled_unique_reroll": "아이템의 유니크 스탯이 10% 상승하거나 아이템이 손상되어 더 이상 강화할 수 없게 됩니다.",
     "item.mmorpg.currency.desc.entangled_unique_reroll": "아이템의 유니크 스탯이 10% 상승하거나 아이템이 손상되어 더 이상 강화할 수 없게 됩니다.",
-    "mmorpg.currency.desc.jewel_corrupt": "보석을 변질시켜 새로운 능력치를 얻게 하지만, 파괴될 수도 있습니다.",
+    "mmorpg.currency.desc.jewel_corrupt": "주얼을 변질시켜 새로운 능력치를 얻게 하지만, 파괴될 수도 있습니다.",
     "item.mmorpg.currency.desc.jewel_corrupt": "보석을 변질시켜 새로운 능력치를 얻게 하지만, 파괴될 수도 있습니다.",
     "item.mmorpg.currency.desc.level_up_orb": "장비 레벨이 증가하며, 아이템당 최대 5회까지 사용할 수 있습니다.",
     "mmorpg.currency.desc.level_up_orb": "장비 레벨이 증가하며, 아이템당 최대 5회까지 사용할 수 있습니다.",
@@ -2686,8 +2686,8 @@
     "mmorpg.currency.desc.sharpening_stone4": "아이템의 품질을 10% 업그레이드하며, 한 번만 사용할 수 있습니다",
     "mmorpg.currency.desc.sharpening_stone5": "아이템의 품질을 12% 업그레이드하며, 한 번만 사용할 수 있습니다",
     "item.mmorpg.currency.desc.sharpening_stone5": "아이템의 품질을 12% 업그레이드하며, 한 번만 사용할 수 있습니다.",
-    "item.mmorpg.currency.desc.socket_adder": "소켓을 추가할 수 있습니다.",
-    "mmorpg.currency.desc.socket_adder": "아이템에 소켓을 추가할 확률이 있지만, 아무 일도 일어나지 않을 수도 있습니다. 아이템의 희귀도가 허용하는 것보다 더 많은 소켓을 추가할 수는 없습니다.",
+    "item.mmorpg.currency.desc.socket_adder": "장비에 소켓을 추가합니다. 꽝이 나올 수 있으며, 아이템의 희귀도가 허용하는 것보다 더 많은 소켓을 추가할 수는 없습니다.",
+    "mmorpg.currency.desc.socket_adder": "장비에 소켓을 추가합니다. 꽝이 나올 수 있으며, 아이템의 희귀도가 허용하는 것보다 더 많은 소켓을 추가할 수는 없습니다.",
     "mmorpg.currency.desc.unique_reroll": "유니크 스탯을 5% 증가시키거나 감소시킵니다.",
     "item.mmorpg.currency.desc.unique_reroll": "유니크 스탯이 5% 증가 또는 감소합니다.",
     "mmorpg.stat_desc.accuracy": "적중 확률이 증가합니다. 명중률이 낮으면 적중하지 않고, 상대가 회피할 확률이 증가합니다.",
@@ -2725,23 +2725,23 @@
     "mmorpg.stat_desc.beast_cast_time": "이 태그에 속한 스킬의 시전 시간이 감소합니다",
     "mmorpg.stat_desc.beast_cdr": "이 태그에 속한 스킬의 쿨타임이 감소합니다.",
     "mmorpg.stat_desc.beast_spell_dmg": "이 태그에 속한 스킬의 피해가 증가합니다.",
-    "mmorpg.stat_desc.bleed_chance": "적중 시 상태이상 발생 확률입니다. 최대치는 100%이며, 상태 이상 강도는 총 피해량에 영향을 받고 모든 상태 이상이 누적되며, 일부 상태 이상은 상한선이 있을 수 있습니다.",
+    "mmorpg.stat_desc.bleed_chance": "적중 시 상태이상 발생 확률입니다. 5초 동안 120%의 \u00A76\u2600 물리\u00A77\u00A79 피해를 입힙니다.",
     "mmorpg.stat_desc.bleed_damage": "상태이상 피해가 증가합니다",
     "mmorpg.stat_desc.bleed_duration": "지속시간이 증가합니다. 지속 피해일 경우, 총 피해량은 증가하지만 초당 피해량은 증가하지 않습니다.",
     "mmorpg.stat_desc.bleed_proc_chance": "중첩된 상태이상을 한번에 터트립니다.",
     "mmorpg.stat_desc.bleed_resistance": "상태이상으로부터 보호하며, 100%이면 면역이 됩니다.",
     "mmorpg.stat_desc.bleed_strength": "효과가 증가합니다. 이미 지속 피해 상태일 경우 피해량이 증가하고, 지속 피해 상태가 아닐경우 지속 피해 상태가 되는데에 필요한 피해량이 감소합니다.",
-    "mmorpg.stat_desc.block_chance": "반대손에 방패를 들고 있을 때, 막기를 사용하지 않아도 공격을 막을 확률",
+    "mmorpg.stat_desc.block_chance": "피해를 무작위로 막을 확률입니다.",
     "mmorpg.stat_desc.block_per_endurance_charge": "해당 효과의 스택 수가 누적될수록 스탯이 증가합니다.",
     "mmorpg.stat_desc.blood": "피는 마나처럼 작용하는 독특한 자원입니다.",
-    "mmorpg.stat_desc.blood_on_kill": "적을 죽일때 마다 자원을 흡수하고, 모든 흡수 스탯에는 상한선이 존재합니다.",
+    "mmorpg.stat_desc.blood_on_kill": "적을 죽일때 마다 자원을 흡수하고, 상한선이 존재합니다.",
     "mmorpg.stat_desc.bonus_exp": "경험치 획득량 증가",
     "mmorpg.stat_desc.bonus_phys_to_ele": "물리 공격 피해의 일정 %를 추가 원소 피해로 획득합니다.",
     "mmorpg.stat_desc.bow_damage": "해당 무기의 피해가 증가합니다.",
     "mmorpg.stat_desc.buff_cast_time": "이 태그에 속한 스킬의 시전 시간이 감소합니다",
     "mmorpg.stat_desc.buff_cdr": "이 태그에 속한 스킬의 쿨타임이 감소합니다.",
     "mmorpg.stat_desc.buff_spell_dmg": "이 태그에 속한 스킬의 피해가 증가합니다.",
-    "mmorpg.stat_desc.burn_chance": "적중 시 상태이상 발생 확률입니다. 최대치는 100%이며, 상태 이상 강도는 총 피해량에 영향을 받고 모든 상태 이상이 누적되며, 일부 상태 이상은 상한선이 있을 수 있습니다.",
+    "mmorpg.stat_desc.burn_chance": "적중 시 상태이상 발생 확률입니다. 3초 동안 100%의 \u00A7c\u2600 화염\u00A77\u00A79 피해를 입힙니다.",
     "mmorpg.stat_desc.burn_damage": "상태이상 피해가 증가합니다",
     "mmorpg.stat_desc.burn_duration": "지속시간이 증가합니다. 지속 피해일 경우, 총 피해량은 증가하지만 초당 피해량은 증가하지 않습니다.",
     "mmorpg.stat_desc.burn_proc_chance": "중첩된 상태이상을 한번에 터트립니다.",
@@ -2815,7 +2815,7 @@
     "mmorpg.stat_desc.ele_staff_damage": "해당 무기의 속성 피해가 증가합니다.",
     "mmorpg.stat_desc.ele_sword_damage": "해당 무기의 속성 피해가 증가합니다.",
     "mmorpg.stat_desc.ele_trident_damage": "해당 무기의 속성 피해가 증가합니다.",
-    "mmorpg.stat_desc.electrify_chance": "적중 시 상태이상 발생 확률입니다. 최대치는 100%이며, 상태 이상 강도는 총 피해량에 영향을 받고 모든 상태 이상이 누적되며, 일부 상태 이상은 상한선이 있을 수 있습니다.",
+    "mmorpg.stat_desc.electrify_chance": "적중 시 상태이상 발생 확률입니다. 누적된 피해를 쇼크로 격폭 시 100%의 추가 \u00A7e\u2600 번개\u00A77\u00A79 피해를 입힐 수 있습니다.",
     "mmorpg.stat_desc.electrify_damage": "상태이상 피해가 증가합니다",
     "mmorpg.stat_desc.electrify_duration": "지속시간이 증가합니다. 지속 피해일 경우, 총 피해량은 증가하지만 초당 피해량은 증가하지 않습니다.",
     "mmorpg.stat_desc.electrify_proc_chance": "중첩된 상태이상을 한번에 터트립니다.",
@@ -2828,8 +2828,8 @@
     "mmorpg.stat_desc.enchanting_exp_bonus": "전문기술 추가 경험치",
     "mmorpg.stat_desc.enchanting_triple_drop": "전문기술 자원의 세 배 드랍 확률이 증가합니다.",
     "mmorpg.stat_desc.energy": "기력은 기본 공격에 사용되는 자원입니다.",
-    "mmorpg.stat_desc.energy_on_hit_hit": "적중 시 해당 값 만큼의 자원을 흡수합니다. 흡수 시 상한선이 존재합니다.",
-    "mmorpg.stat_desc.energy_on_kill": "적을 죽일때 마다 자원을 흡수하고, 모든 흡수 스탯에는 상한선이 존재합니다.",
+    "mmorpg.stat_desc.energy_on_hit_hit": "적중 시 해당 값 만큼의 자원을 흡수하며,상한선이 존재합니다.",
+    "mmorpg.stat_desc.energy_on_kill": "적을 죽일때 마다 자원을 흡수하고, 상한선이 존재합니다.",
     "mmorpg.stat_desc.energy_per_sec": "초당 회복량의 % 만큼 회복합니다.",
     "mmorpg.stat_desc.energy_regen": "자연적으로 회복되는 기력의 양을 나타냅니다.",
     "mmorpg.stat_desc.extra_mob_drops": "이 스탯을 가진 몹은 처치 시 추가 전리품을 획득합니다.",
@@ -2846,7 +2846,7 @@
     "mmorpg.stat_desc.fishing_double_drop": "전문기술 자원의 두 배 드랍 확률이 증가합니다.",
     "mmorpg.stat_desc.fishing_exp_bonus": "전문기술 추가 경험치",
     "mmorpg.stat_desc.fishing_triple_drop": "전문기술 자원의 세 배 드랍 확률이 증가합니다.",
-    "mmorpg.stat_desc.freeze_chance": "적중 시 상태이상 발생 확률입니다. 최대치는 100%이며, 상태 이상 강도는 총 피해량에 영향을 받고 모든 상태 이상이 누적되며, 일부 상태 이상은 상한선이 있을 수 있습니다.",
+    "mmorpg.stat_desc.freeze_chance": "적중 시 상태이상 발생 확률입니다.적을 느리게 하고, 누적된 피해를 격폭 시 85%의 추가 \u00A7b\u2600 냉기\u00A77\u00A79 피해를 입힙니다.",
     "mmorpg.stat_desc.freeze_damage": "상태이상 피해가 증가합니다",
     "mmorpg.stat_desc.freeze_duration": "지속시간이 증가합니다. 지속 피해일 경우, 총 피해량은 증가하지만 초당 피해량은 증가하지 않습니다.",
     "mmorpg.stat_desc.freeze_proc_chance": "중첩된 상태이상을 한번에 터트립니다.",
@@ -2867,8 +2867,8 @@
     "mmorpg.stat_desc.heal_effect_on_self": "나에게 적용되는 회복 관련 스킬의 회복량이 증가합니다.",
     "mmorpg.stat_desc.heal_spell_dmg": "이 태그에 속한 스킬의 피해가 증가합니다.",
     "mmorpg.stat_desc.health": "최대 체력이 증가합니다.",
-    "mmorpg.stat_desc.health_on_hit_hit": "적중 시 해당 값 만큼의 자원을 흡수합니다. 흡수 시 상한선이 존재합니다.",
-    "mmorpg.stat_desc.health_on_kill": "적을 죽일때 마다 자원을 흡수하고, 모든 흡수 스탯에는 상한선이 존재합니다.",
+    "mmorpg.stat_desc.health_on_hit_hit": "적중 시 해당 값 만큼의 자원을 흡수하며,상한선이 존재합니다.",
+    "mmorpg.stat_desc.health_on_kill": "적을 죽일때 마다 자원을 흡수하고, 상한선이 존재합니다.",
     "mmorpg.stat_desc.health_per_sec": "초당 회복량의 % 만큼 회복합니다.",
     "mmorpg.stat_desc.health_regen": "자연적으로 회복되는 체력의 양을 나타냅니다.",
     "mmorpg.stat_desc.hit_damage": "적중 시 피해가 증가합니다.",
@@ -2919,14 +2919,14 @@
     "mmorpg.stat_desc.magic_find": "희귀도가 높은 아이템을 얻을 확률이 증가합니다.",
     "mmorpg.stat_desc.magic_shield": "추가 체력과 같은 역할을 하지만, 회복량은 별개로 동작합니다.",
     "mmorpg.stat_desc.magic_shield_heal": "힐량의 일정 비율이 마법 보호막에도 적용됩니다.",
-    "mmorpg.stat_desc.magic_shield_on_hit_hit": "적중 시 해당 값 만큼의 자원을 흡수합니다. 흡수 시 상한선이 존재합니다.",
-    "mmorpg.stat_desc.magic_shield_on_kill": "적을 죽일때 마다 자원을 흡수하고, 모든 흡수 스탯에는 상한선이 존재합니다.",
+    "mmorpg.stat_desc.magic_shield_on_hit_hit": "적중 시 해당 값 만큼의 자원을 흡수하며,상한선이 존재합니다.",
+    "mmorpg.stat_desc.magic_shield_on_kill": "적을 죽일때 마다 자원을 흡수하고, 상한선이 존재합니다.",
     "mmorpg.stat_desc.magic_shield_per_sec": "초당 회복량의 % 만큼 회복합니다.",
     "mmorpg.stat_desc.magic_shield_regen": "자연적으로 회복되는 마법 보호막의 양을 나타냅니다.",
     "mmorpg.stat_desc.magic_spell_dmg": "이 태그에 속한 스킬의 피해가 증가합니다.",
     "mmorpg.stat_desc.mana": "마나는 스킬을 시전하기 위해 필요한 자원입니다.",
-    "mmorpg.stat_desc.mana_on_hit_hit": "적중 시 해당 값 만큼의 자원을 흡수합니다. 흡수 시 상한선이 존재합니다.",
-    "mmorpg.stat_desc.mana_on_kill": "적을 죽일때 마다 자원을 흡수하고, 모든 흡수 스탯에는 상한선이 존재합니다.",
+    "mmorpg.stat_desc.mana_on_hit_hit": "적중 시 해당 값 만큼의 자원을 흡수하며,상한선이 존재합니다.",
+    "mmorpg.stat_desc.mana_on_kill": "적을 죽일때 마다 자원을 흡수하고, 상한선이 존재합니다.",
     "mmorpg.stat_desc.mana_per_sec": "초당 회복량의 % 만큼 회복합니다.",
     "mmorpg.stat_desc.mana_regen": "자연적으로 회복되는 마나의 양을 나타냅니다.",
     "mmorpg.stat_desc.mana_shield": "피해의 일정 비율을 마나로 흡수합니다. 이 효과는 마나가 50% 이상일 때만 적용됩니다. 마나 보호막은 마법 보호막 다음에 적용됩니다.",
@@ -2966,7 +2966,7 @@
     "mmorpg.stat_desc.physical_spell_dmg": "이 태그에 속한 스킬의 피해가 증가합니다.",
     "mmorpg.stat_desc.piercing_projectiles": "스킬이 적을 관통하게 됩니다.",
     "mmorpg.stat_desc.plus_spell_lvls_desc": "스킬 레벨을 증가시킵니다. 각 스킬은 최대 레벨보다 +5 레벨만 증가할 수 있습니다!",
-    "mmorpg.stat_desc.poison_chance": "적중 시 상태이상 발생 확률입니다. 최대치는 100%이며, 상태 이상 강도는 총 피해량에 영향을 받고 모든 상태 이상이 누적되며, 일부 상태 이상은 상한선이 있을 수 있습니다.",
+    "mmorpg.stat_desc.poison_chance": "적중 시 상태이상 발생 확률입니다. 10초 동안 150%의 \u00A75\u2600 혼돈\u00A77\u00A79 피해를 입힙니다.",
     "mmorpg.stat_desc.poison_damage": "상태이상 피해가 증가합니다",
     "mmorpg.stat_desc.poison_duration": "지속시간이 증가합니다. 지속 피해일 경우, 총 피해량은 증가하지만 초당 피해량은 증가하지 않습니다.",
     "mmorpg.stat_desc.poison_proc_chance": "중첩된 상태이상을 한번에 터트립니다.",
@@ -3111,7 +3111,7 @@
     "spell.desc.power_chord": "화음의 공을 던져, [calc:power_chord] §6☀ 물리§7 피해를 입히고 적에게 매혹을 부여하여 방어력을 감소시킵니다.",
     "spell.desc.profane_explosion": "Causes an explosion dealing [calc:profane_explosion] §5☀ Chaos§7 Damage",
     "spell.desc.pull": "범위 내의 적을 자신에게 끌어당겨 [calc:pull] §6☀ 물리§7 피해를 입히고 둔화시킵니다.",
-    "spell.desc.quickdraw": "활이 속사로 발사되며, 무한 화살이 없는 경우 화살 더미도 지급됩니다.",
+    "spell.desc.quickdraw": "속사 버프를 자신에게 시전하며, 지속시간동안 활이 즉발로 나갑니다. 활에 무한 화살 마법부여가 없는 경우 화살이 인벤토리에 지급됩니다.",
     "spell.desc.recoil_shot": "후방으로 이동하며 화살을 쏴 [calc:explosive_arrow] §c☀ 물리§7 피해를 입히고 해당 지역에 상처를 입힙니다.",
     "spell.desc.refresh": "모든 재사용 대기시간이 1분씩 갱신됩니다.",
     "spell.desc.rejuv_totem": "토템을 소환하여 주위 아군의 [calc:totem_heal] 생명력을 회복시킵니다.",
