--- a/src/main/resources/assets/mmorpg/lang/ja_jp.json
+++ b/src/main/resources/assets/mmorpg/lang/ja_jp.json
@@ -168,14 +168,14 @@
   "mmorpg.item_tips.gem_open_gui_tip": "右クリックしてGUIを開く",
   "mmorpg.item_tips.infused": "注入済み(%1$s/10): ",
   "mmorpg.item_tips.infusion_gear_level_range": "ギアレベル範囲: %1$s - %2$s",
-  "mmorpg.item_tips.item_tier_tip": "アイテム階層: %1$s",
-  "mmorpg.item_tips.item_type": "アイテムタイプ: %1$s",
+  "mmorpg.item_tips.item_tier_tip": "アイテムティア: ",
+  "mmorpg.item_tips.item_type": "アイテムタイプ: ",
   "mmorpg.item_tips.jewel_stats": "ジュエルのステータス: ",
   "mmorpg.item_tips.jewel_upgrade_1": "アップグレードの必要性: %1$sx %2$s",
   "mmorpg.item_tips.jewel_upgrade_2": "[石のあるジュエルをクリック]",
-  "mmorpg.item_tips.level_range": "レベル: %1$s",
+  "mmorpg.item_tips.level_range": "レベル: ",
   "mmorpg.item_tips.level_req": "最小プレイヤーレベル: %1$s",
-  "mmorpg.item_tips.level_tip": "レベル%1$s",
+  "mmorpg.item_tips.level_tip": "レベル",
   "mmorpg.item_tips.loot": "ボーナス戦利品: %1$s%%",
   "mmorpg.item_tips.loot_chest_key_desc": "釣りの職業から得た戦利品チェストのロックを解除するために使用します。",
   "mmorpg.item_tips.map_league_spawn": "スポーン可能: ",
@@ -198,7 +198,7 @@
   "mmorpg.item_tips.rarity_tip": "レアリティ: ",
   "mmorpg.item_tips.recipe_material": "レシピの材料:",
   "mmorpg.item_tips.remaining_aura_capacity": "残りのオーグメント容量: ",
-  "mmorpg.item_tips.restores": "復元: %1$s %2$s",
+  "mmorpg.item_tips.restores": "回復: %1$s%%",
   "mmorpg.item_tips.rune_item_usage": "ソケットを挿入してギアに使用します\n同じルーンがすでにソケットにある場合は、それを再ロールします\n\nすべてのルーンワードは Wiki に掲載されています。\n作成可能なルーンワードを表示するために使用します。",
   "mmorpg.item_tips.shift_tip": "[シフト]：詳細",
   "mmorpg.item_tips.socket_extractor_usage": "アイテムからジェムを抽出します",
@@ -216,7 +216,7 @@
   "mmorpg.item_tips.support_gem_explanation": "差し込まれたスペルのパワーを強化します。",
   "mmorpg.item_tips.support_gem_only_one": "1 つだけ許可されます: ",
   "mmorpg.item_tips.tier_influence": "モブに対するティアの影響",
-  "mmorpg.item_tips.tier_tip": "ティア %1$s",
+  "mmorpg.item_tips.tier_tip": "ティア: ",
   "mmorpg.item_tips.tp_back_item": "右クリックしてマップから戻る\nマップディメンションを終了します。",
   "mmorpg.item_tips.uber_boss_frag_tip": "作業テーブルでさらに多くのフラグメントを組み合わせます\nUber Boss を含むマップを作成します",
   "mmorpg.item_tips.uber_boss_map_tip": "右クリックしてマップアイテムを生成\nボス戦につながる",
@@ -835,7 +835,7 @@
   "mmorpg.talent.lifesteal_big": "メジャーライフスティール",
   "mmorpg.talent.lightning_any_wep_damage_big": "雷武器による大ダメージ",
   "mmorpg.talent.lightning_dot_damage_big": "継続重大な雷被害",
-  "mmorpg.talent.lightning_penetration_big": "大規模な雷の貫通",
+  "mmorpg.talent.lightning_penetration_big": "大規模な雷貫通",
   "mmorpg.talent.lightning_resist_big": "主要な雷耐性",
   "mmorpg.talent.mage": "メイジ",
   "mmorpg.talent.magic_shield_percent_big": "メジャーマジックシールド",
@@ -1015,7 +1015,7 @@
   "mmorpg.stat.blood_leech_cap": "血吸収上限",
   "mmorpg.stat.blood_on_is_blocked": "§7ブロック上の血を獲得§a[VAL1]§7",
   "mmorpg.stat.blood_on_is_dodged": "§7獲得§a[VAL1]§7 ドッジのブラッド",
-  "mmorpg.stat.blood_on_kill": "吸収・ブラッド・オン・キル",
+  "mmorpg.stat.blood_on_kill": "キル時の血吸収",
   "mmorpg.stat.blood_per_10_strength": "§a[VAL1] §4❤ 血§7/10 §b★ 筋力§7",
   "mmorpg.stat.blood_user": "§7あなたは§9☯マナ§7の代わりに§4❤ブラッド§7を使用するようになりました。",
   "mmorpg.stat.bonus_exp": "ボーナス経験値",
@@ -1175,7 +1175,7 @@
   "mmorpg.stat.fire_dot_damage": "継続火傷ダメージ",
   "mmorpg.stat.fire_health_leech": "§7吸収§a[VAL1]%§7 の §c☀ 火§7 ダメージを体力として与える",
   "mmorpg.stat.fire_mana_leech": "§7吸収 §a[VAL1]%§7 の §c☀ 火§7 ダメージをマナとして与える",
-  "mmorpg.stat.fire_penetration": "火の貫通",
+  "mmorpg.stat.fire_penetration": "火貫通",
   "mmorpg.stat.fire_res_aura_cost": "§7フレイムバリアオーグメントコスト",
   "mmorpg.stat.fire_resist": "火耐性",
   "mmorpg.stat.fire_spell_dmg": "火スペルタグダメージ",
@@ -1223,10 +1223,10 @@
   "mmorpg.stat.heal_spell_dmg_taken": "受けたダメージを回復する",
   "mmorpg.stat.health": "体力",
   "mmorpg.stat.health_leech_cap": "体力吸収上限",
-  "mmorpg.stat.health_on_hit_hit": "ヒット時の吸収の体力",
+  "mmorpg.stat.health_on_hit_hit": "ヒット時の体力吸収",
   "mmorpg.stat.health_on_is_blocked": "§7ブロックで§a[VAL1]§7 体力を獲得",
   "mmorpg.stat.health_on_is_dodged": "§7回避で§a[VAL1]§7 の体力を獲得",
-  "mmorpg.stat.health_on_kill": "吸収のキル時の体力",
+  "mmorpg.stat.health_on_kill": "キル時の体力吸収",
   "mmorpg.stat.health_per_10_armor": "§a[VAL1] §c❤ 体力§7/10 §9★ 防御力§7",
   "mmorpg.stat.health_per_10_dexterity": "§a[VAL1] §c❤ 体力§7/10 §b★ 器用さ§7",
   "mmorpg.stat.health_per_10_intelligence": "§a[VAL1] §c❤ 体力§7/10 §b★ 知力§7",
@@ -1385,7 +1385,7 @@
   "mmorpg.stat.lightning_dot_damage": "継続雷ダメージ",
   "mmorpg.stat.lightning_health_leech": "§7吸収§a[VAL1]%§7 の §e☀ 雷§7 ダメージを体力として与える",
   "mmorpg.stat.lightning_mana_leech": "§7吸収§a[VAL1]%§7 の§e☀ 雷§7 マナとしてのダメージ",
-  "mmorpg.stat.lightning_penetration": "雷の貫通",
+  "mmorpg.stat.lightning_penetration": "雷貫通",
   "mmorpg.stat.lightning_resist": "雷耐性",
   "mmorpg.stat.lightning_resist_per_1_fire_resist": "§a[VAL1] §e☀ 雷耐性§7 per 1 §c☀ 耐火§7",
   "mmorpg.stat.lightning_spell_dmg": "雷スペルタグダメージ",
@@ -1400,10 +1400,10 @@
   "mmorpg.stat.magic_shield_aura_cost": "§7マジックシールドの強化コスト",
   "mmorpg.stat.magic_shield_heal": "マジックシールドヒーリング",
   "mmorpg.stat.magic_shield_leech_cap": "マジックシールド吸収上限",
-  "mmorpg.stat.magic_shield_on_hit_hit": "ヒット時吸収マジックシールド",
+  "mmorpg.stat.magic_shield_on_hit_hit": "ヒット時のマジックシールド吸収",
   "mmorpg.stat.magic_shield_on_is_blocked": "§7ブロックで§a[VAL1]§7マジックシールドを獲得",
   "mmorpg.stat.magic_shield_on_is_dodged": "§7回避で§a[VAL1]§7マジックシールドを獲得",
-  "mmorpg.stat.magic_shield_on_kill": "吸収・マジック・シールド・オン・キル",
+  "mmorpg.stat.magic_shield_on_kill": "キル時のマジックシールド吸収",
   "mmorpg.stat.magic_shield_per_10_dodge": "§a[VAL1] §d❤ マジックシールド§7/10 §2★ 回避率§7",
   "mmorpg.stat.magic_shield_per_10_mana": "§a[VAL1] §d❤ マジックシールド§7/10 §9☯ マナ§7",
   "mmorpg.stat.magic_shield_per_sec": "回復ごとのマジックシールド",
@@ -1415,10 +1415,10 @@
   "mmorpg.stat.mana": "マナ",
   "mmorpg.stat.mana_cost": "マナコスト",
   "mmorpg.stat.mana_leech_cap": "マナ吸収上限",
-  "mmorpg.stat.mana_on_hit_hit": "ヒット時にマナを吸収する",
+  "mmorpg.stat.mana_on_hit_hit": "ヒット時のマナ吸収",
   "mmorpg.stat.mana_on_is_blocked": "§7ブロックで§a[VAL1]§7マナを獲得",
   "mmorpg.stat.mana_on_is_dodged": "§7回避で§a[VAL1]§7マナを獲得",
-  "mmorpg.stat.mana_on_kill": "キル時にマナを吸収する",
+  "mmorpg.stat.mana_on_kill": "キル時のマナ吸収",
   "mmorpg.stat.mana_per_10_armor": "§a[VAL1] §9☯ マナ§7/10 §9★ 防御力§7",
   "mmorpg.stat.mana_per_10_dexterity": "§a[VAL1] §9☯ マナ§7/10 §b★ 器用さ§7",
   "mmorpg.stat.mana_per_10_dodge": "§a[VAL1] §9☯ マナ§7/10 §2★ 回避率§7",
@@ -1647,7 +1647,7 @@
   "mmorpg.stat.water_dot_damage": "継続冷気",
   "mmorpg.stat.water_health_leech": "§7吸収§a[VAL1]%§7 の §b☀ 冷気§7 ダメージを体力として与える",
   "mmorpg.stat.water_mana_leech": "§7吸収 §a[VAL1]%§7 の §b☀ 冷気§7 ダメージをマナとして与える",
-  "mmorpg.stat.water_penetration": "冷気の貫通",
+  "mmorpg.stat.water_penetration": "冷気貫通",
   "mmorpg.stat.water_resist": "冷気耐性",
   "mmorpg.stat.water_resist_per_1_fire_resist": "§a[VAL1] §b☀ 冷気耐性§7 per 1 §c☀ 耐火§7",
   "mmorpg.stat.water_vuln_crit": "§7冷気ダメージは常にあなたにクリティカルを与えます。",
@@ -2555,7 +2555,7 @@
   "mmorpg.word.pressformoreinfo": "詳細についてはクリックしてください",
   "mmorpg.word.pressshiftforrequirements": "条件については Shift キーを押してください",
   "mmorpg.word.primary_rarity_mat": "プライマリレアリティマテリアル",
-  "mmorpg.word.primary_tier_mat": "主要な階層/レベルのマテリアル",
+  "mmorpg.word.primary_tier_mat": "主要なティア/レベルのマテリアル",
   "mmorpg.word.profession_messages": "職業経験値を獲得すると短いメッセージが表示されます。\n\nカーソルを合わせると、Exp がどのように変更されたかなどの役立つ情報が表示されます",
   "mmorpg.word.professions": "職業",
   "mmorpg.word.prophecies": "予言",
@@ -2599,7 +2599,7 @@
   "mmorpg.word.talents": "タレント",
   "mmorpg.word.target": "ターゲット",
   "mmorpg.word.this_is_not_a": "これは%1$sではありません",
-  "mmorpg.word.tier": "階層",
+  "mmorpg.word.tier": "ティア",
   "mmorpg.word.title_feature_aggro_summons": "アグレッシブな召喚",
   "mmorpg.word.title_feature_auto_team": "近くのプレイヤーのオートチーム",
   "mmorpg.word.title_feature_cast_fail": "スペル発動失敗メッセージ",
