--- a/src/main/resources/assets/mmorpg/lang/ja_jp.json
+++ b/src/main/resources/assets/mmorpg/lang/ja_jp.json
@@ -168,14 +168,14 @@
   "mmorpg.item_tips.gem_open_gui_tip": "右クリックしてGUIを開く",
   "mmorpg.item_tips.infused": "注入済み(%1$s/10): ",
   "mmorpg.item_tips.infusion_gear_level_range": "ギアレベル範囲: %1$s - %2$s",
-  "mmorpg.item_tips.item_tier_tip": "アイテムティア: ",
-  "mmorpg.item_tips.item_type": "アイテムタイプ: ",
+  "mmorpg.item_tips.item_tier_tip": "アイテムティア: %1$s",
+  "mmorpg.item_tips.item_type": "アイテムタイプ: %1$s",
   "mmorpg.item_tips.jewel_stats": "ジュエルのステータス: ",
   "mmorpg.item_tips.jewel_upgrade_1": "アップグレードの必要性: %1$sx %2$s",
   "mmorpg.item_tips.jewel_upgrade_2": "[石のあるジュエルをクリック]",
-  "mmorpg.item_tips.level_range": "レベル: ",
+  "mmorpg.item_tips.level_range": "レベル: %1$s",
   "mmorpg.item_tips.level_req": "最小プレイヤーレベル: %1$s",
-  "mmorpg.item_tips.level_tip": "レベル",
+  "mmorpg.item_tips.level_tip": "レベル %1$s",
   "mmorpg.item_tips.loot": "ボーナス戦利品: %1$s%%",
   "mmorpg.item_tips.loot_chest_key_desc": "釣りの職業から得た戦利品チェストのロックを解除するために使用します。",
   "mmorpg.item_tips.map_league_spawn": "スポーン可能: ",
@@ -198,7 +198,7 @@
   "mmorpg.item_tips.rarity_tip": "レアリティ: ",
   "mmorpg.item_tips.recipe_material": "レシピの材料:",
   "mmorpg.item_tips.remaining_aura_capacity": "残りのオーグメント容量: ",
-  "mmorpg.item_tips.restores": "回復: %1$s%%",
+  "mmorpg.item_tips.restores": "回復: %1$s %2$s",
   "mmorpg.item_tips.rune_item_usage": "ソケットを挿入してギアに使用します\n同じルーンがすでにソケットにある場合は、それを再ロールします\n\nすべてのルーンワードは Wiki に掲載されています。\n作成可能なルーンワードを表示するために使用します。",
   "mmorpg.item_tips.shift_tip": "[シフト]：詳細",
   "mmorpg.item_tips.socket_extractor_usage": "アイテムからジェムを抽出します",
